made the alignment issue with team and categories lists a little better -- not fixed

--- a/frontend/src/assets/styles/components/_categories.scss
+++ b/frontend/src/assets/styles/components/_categories.scss
@@ -1,6 +1,5 @@
 .categories-container {
-  min-height: calc(100vh - 200px);
-  margin-bottom: 20px;
+  min-height: calc(100vh - 170px);
   position: relative;
 
   form {
